--- a/css/banner.css
+++ b/css/banner.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     padding: 60px 160px;
-    background-image: url(/Desafio-Final/imgs/background-banner.png);
+    background-image: url(/imgs/background-banner.png);
     gap: 150px;
 }
 
