--- a/css/contato.css
+++ b/css/contato.css
@@ -191,6 +191,7 @@ form textarea {
     .contato h2 {
         font-size: 20px;
         line-height: 32px;
+        width: 100%;
     }
 
     .container-contato {
@@ -199,7 +200,7 @@ form textarea {
 
     .contaier-parte1 {
         margin-top: 10px;
-        width: auto;
+        width: 100%;
         padding: 20px 25px;
     }
 
