--- a/css/servicos.css
+++ b/css/servicos.css
@@ -67,12 +67,18 @@
 
     .card-image {
         position: relative; 
-        width: 312px;
+        width: 100%;
         height: 271px;
         border-radius: 5px;
         cursor: pointer;
     }
-    
+
+    .swiper {
+        max-width: 1430px;
+        width: 100%;
+        height: 271px;
+        --swiper-navigation-color: #fff;
+    }
 
     .servicos {
         padding: 20px;
