--- a/css/contato.css
+++ b/css/contato.css
@@ -101,6 +101,10 @@ iframe {
     border-radius: 1px;
 }
 
+.resp-mapa {
+    display: none;
+}
+
 .form-parte1 {
     display: flex;
     gap: 20px;
@@ -110,6 +114,10 @@ iframe {
 .container1-form-parte1 {
     display: flex;
     flex-direction: column;
+}
+
+.responsivo-nomecompleto {
+    display: none;
 }
 
 form label {
@@ -209,6 +217,18 @@ form textarea {
         line-height: 20px;
     }
 
+    .responsivo-nomecompleto {
+        display: block;
+    }
+
+    .responsivonom {
+        display: none;
+    }
+
+    .caixa-texto {
+        height: 160px;
+    }
+
     .descricao-container-parte1 {
         margin: 10px 0;
         font-size: 14px;
@@ -229,10 +249,6 @@ form textarea {
         margin: 0;
     }
 
-    .contaier-parte2 h4 {
-        font-size: 12px;
-        margin-bottom: 15px;
-    }
 
     form label {
         font-size: 10px;
@@ -255,6 +271,38 @@ form textarea {
         font-size: 12px;
     }
 
+    .resp-mapa {
+        display: block;
+    }
+    
+    .contaier-parte2 h4 {
+        font-size: 12px;
+        margin-bottom: 15px;
+    }
+
+    .onde-nos-encontrar {
+        margin-top: 26px;
+    }
+
+    .contaier-parte2 h4::before {
+        display: none;
+    }
+
+    .container-endereco p {
+        font-size: 10px;
+        line-height: 14px;
+        color: #666666;
+    }
+
+    .container-endereco img {
+        width: 16;
+        height: 16px;
+    }
+
+    iframe {
+        width: 100%;
+        height: 170px;
+    }
 
 }
 
