--- a/css/banner.css
+++ b/css/banner.css
@@ -41,14 +41,14 @@
 
     .banner {
         flex-direction: column;
-        gap: 16px;
+        gap: 0;
         width: 100%;
         height: 60vh;
         padding: 20px;
     }
 
     .banner h1 {
-        font-size: 24px;
+        font-size: 20px;
         line-height: 32px;
         padding: 20px;
     }
