--- a/css/contato.css
+++ b/css/contato.css
@@ -7,7 +7,7 @@
 }
 
 .contato h2 {
-    /* ajeitar posicionamento */
+    align-self:self-start;
     font-size: 48px;
     font-weight: 700;
     line-height: 52px;
