--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
 
 p {
     font-family: Lato;
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight: 500;
     line-height: 24px;
     color: #333333
