--- a/css/servicos-modal.css
+++ b/css/servicos-modal.css
@@ -44,4 +44,47 @@
     margin-bottom: 40px;
 }
 
-/* criar pseudoelement abaixo do forms */
+@media (max-width: 360px) {
+    /* Ajustes para modais em telas pequenas */
+    .modal-content {
+        margin: 50% auto; /* Centralizado com menos margem no topo */
+        padding: 20px; /* Menor padding */
+        width: 90%; /* Ajustar a largura para 90% da tela */
+    }
+
+    .modal-content p {
+        font-size: 1rem;
+    }
+
+    .close {
+        top: 10px; /* Menor distância do topo */
+        right: 10px; /* Menor distância da direita */
+        font-size: 1.5rem; /* Reduzir o tamanho da fonte */
+        display: block; /* Certificar que o botão é exibido */
+    }
+
+    .modal-content p {
+        margin-bottom: 20px; /* Menor margem inferior */
+    }
+
+    .form-parte1 {
+        display: flex;
+        flex-direction: column; /* Colocar itens em coluna */
+    }
+
+    .container1-form-parte1 {
+        margin-bottom: 10px; /* Margem inferior para espaçamento */
+    }
+
+    .input-padrao {
+        width: 100%; /* Ajustar inputs para a largura total */
+    }
+
+    label.checkbox {
+        font-size: 0.8rem; /* Ajustar tamanho da fonte */
+    }
+
+    .enviar {
+        width: 100%; /* Botão de enviar ocupa a largura total */
+    }
+}
