--- a/css/footer.css
+++ b/css/footer.css
@@ -138,7 +138,7 @@ footer h2 {
   }
 
   .footer-parte1 p {
-    font-size: 0.5rem;
+    font-size: 0.625rem;
   }
 
   .texto-copyright {
@@ -172,6 +172,10 @@ footer h2 {
     width: 16px;
     height: 16px;
     margin-bottom: 30px;
+  }
+
+  .social-icon i {
+    font-size: 1.5rem;
   }
 
   .footer-parte2 {
